--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "keempat",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "autoprefixer": "10.4.14",
-    "next": "13.4.13",
-    "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
-  }
+    "name": "keempat",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "autoprefixer": "10.4.14",
+        "next": "13.4.13",
+        "postcss": "8.4.27",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-slideshow-image": "^4.2.1",
+        "tailwindcss": "3.3.3"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.22.10",
+        "@babel/core": "^7.22.11",
+        "@babel/preset-env": "^7.22.14",
+        "daisyui": "^3.5.1"
+    }
 }
