--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "tailwindcss": "3.3.3"
     },
     "devDependencies": {
-        "daisyui": "^3.5.1"
+        "daisyui": "^3.5.1",
+        "prettier": "^3.0.3",
+        "prettier-plugin-tailwindcss": "^0.5.4"
     }
 }
