--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "keempat",
+    "name": "formasi",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -22,7 +22,6 @@
     },
     "devDependencies": {
         "daisyui": "^3.5.1",
-        "prettier": "^3.0.3",
         "prettier-plugin-tailwindcss": "^0.5.4"
     }
 }
